--- a/MENU_VECTOR/MENU_VECTOR.vcxproj.filters
+++ b/MENU_VECTOR/MENU_VECTOR.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="MENU_VECTOR.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="VectorManager.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="VectorManager.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
