--- a/MENU_VECTOR/MENU_VECTOR.vcxproj
+++ b/MENU_VECTOR/MENU_VECTOR.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="MENU_VECTOR.cpp" />
+    <ClCompile Include="VectorManager.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="VectorManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
